added endpoint /users/waterRate
